# cpp_final_project

./: CMakeLists.txt  LICENSE  README.md  README.txt  log_computer.txt  log_human.txt  run.sh
include/: board.h  box.h  building.h  category.h  config.h  contract.h  dice.h  game.h  player.h  playground.h
include/building/: building.h  hotel.h  house.h  terrain.h
include/logger/: logger.h  logger.hpp
include/players/: action.h  bot.h  human.h  player.h
src/: board.cpp  box.cpp  category.cpp  config.cpp  contract.cpp  dice.cpp  game.cpp  main.cpp  player.cpp  playground.cpp
src/building/: building.cpp  hotel.cpp  house.cpp  terrain.cpp
src/logger/: logger.cpp
src/players/: bot.cpp  human.cpp  player.cpp
test/: CMakeLists.txt  run_tests.sh
test/include/: test.h
test/include/core/: test.h  test_config.h  test_suite.h
test/include/unit/: unit_test_board.h  unit_test_box.h  unit_test_category.h  unit_test_config.h  unit_test_contract.h  unit_test_dice.h  unit_test_game.h  unit_test_playground.h
test/include/unit/building/: unit_test_hotel.h  unit_test_house.h  unit_test_terrain.h
test/include/unit/logger/: unit_test_logger.h
test/include/unit/players/: unit_test_bot.h  unit_test_human.h
test/src/: test.cpp  test_runner.cpp
test/src/core/: test.cpp  test_suite.cpp
test/src/unit/: unit_test_board.cpp  unit_test_box.cpp  unit_test_category.cpp  unit_test_config.cpp  unit_test_contract.cpp  unit_test_dice.cpp  unit_test_game.cpp  unit_test_playground.cpp
test/src/unit/building/: unit__test_house.cpp  unit_test_hotel.cpp  unit_test_house.cpp  unit_test_terrain.cpp
test/src/unit/logger/: unit_test_logger.cpp
test/src/unit/players/: unit_test_bot.cpp  unit_test_human.cpp
